sofia-rs/tui/src/chatwidget/snapshots/sofia_tui__chatwidget__tests__replayed_in_progress_turn.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: "normalize_completion_timestamps(& (render_bottom_popup(&chat, 80)))"
---
• Working (0s • esc to interrupt)


› Ask Sofia to do anything

  gpt-5.6-sol default · /tmp/project
